--- a/index.html
+++ b/index.html
@@ -44,7 +44,26 @@
                     <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
                 </figure>
             </section>
+            <section>
+                <h2></h2>
+                <form action="">
+                    <fieldset>
+                        <legend>Is your can an indoor or outdoor cat?</legend>
+                        <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
+                        <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>What's your cat's personality</legend>
+                        <input id="loving" type="checkbox" name="personality" value="loving" checked><label for="">Loving</label>
+                        <input id="lazy" type="checkbox" name="personality" value="lazy"><label for="">Lazy</label>
+                        <input id="energetic" type="checkbox" name="personality" value="energetic"><label for="">Energetic</label>
+                    </fieldset>
+                    <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+                    <button type="submit">Submit</button>
+                </form>
+            </section>
         </main>
-        <footer></footer>
+        <footer>
+        </footer>
     </body>
 </html>
