--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li>lasagna</li>
                 </ul>
                 <figure>
-                    <img 
+                    <img  
                         src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" 
                         alt="A slice of lasagna on a plate."
                     >
@@ -45,7 +45,7 @@
                 </figure>
             </section>
             <section>
-                <h2></h2>
+                <h2>Cat Form</h2>
                 <form action="">
                     <fieldset>
                         <legend>Is your can an indoor or outdoor cat?</legend>
